<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">HiddenClient</string>
    <string name="image_description_logo">Logo Image</string>
    <string name="image_description_back">Back</string>
    <string name="sign_in">Sign In</string>
    <string name="i_forgot_password">I\'ve Forgotten My Password</string>
    <string name="not_a_member">Not a member?</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_invite_code">Please enter your invite code\nbelow to get started</string>
    <string name="enter_legal_bit">Now the legal bit…</string>
    <string name="enter_learn_more_sign_up">The Hidden app is exclusively for existing clients. Keen to learn more and to sign up? Email the team below and we\'ll get right back to you.</string>
    <string name="get_started">Get Started</string>
    <string name="not_have_code">I don\'t have a code</string>
    <string name="already_member">Already a member?</string>
    <string name="what_can_we_call_you">What can we call you?</string>
    <string name="next">Next</string>
    <string name="nice_to_meet_you">Nice to meet you Guy!\nWhere are you based?</string>
    <string name="i_live">I live in…</string>
    <string name="pick_3_job_title">Pick 3 job titles that best describe what you do</string>
    <string name="primarily_i_am">Primarily, I\'m a…</string>
    <string name="i_am_also">I am also a…</string>
    <string name="some_call_me">Some call me a…</string>
    <string name="lets_talk_money">Let\'s talk money…</string>
    <string name="my_current_salary">My current salary is…</string>
    <string name="i_am_looking_for">I\'m looking for…</string>
    <string name="where_can_we_find_your_work">Where can we find your work</string>
    <string name="my_linked_url_is">My LinkedIn URL is…</string>
    <string name="my_github_url_is">My Github URL is…</string>
    <string name="my_dribble_url_is">My Dribble URL is…</string>
    <string name="my_behance_url_is">My Behance URL is…</string>
    <string name="how_can_we_reach_you">How can we reach you to discuss your profile?</string>
    <string name="call_me">Call me on…</string>
    <string name="last_step">Last step! Set a username and password for access to the app</string>
    <string name="super_secure_password">Super secure password</string>
    <string name="read_terms_of_service">I have read and accept the Hidden <![CDATA[<font color="#66CC66">Terms of Service</font>]]></string>
    <string name="i_want_to_receive_email">I want to receive emails from Hidden about updates, news and events</string>
    <string name="read_privacy_policy">If you want to read about how we process your personal data please read our <![CDATA[<font color="#66CC66">Privacy Policy</font>]]></string>
    <string name="thanks_for_applying">Thanks for applying to be part of the Hidden community!\n\nOur Tribe team are reviewing your application and will be in touch soon</string>
    <string name="refresh_status">Refresh </string>
    <string name="popular_cities">Popular Cities</string>
    <string name="our_people">Our People</string>
    <string name="jobSettings">Settings</string>
    <string name="candidate_directory">Candidate Directory</string>
    <string name="edit_your_details">Edit Your Details</string>
    <string name="view_company_profiles">View Company Profile</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="candidates">Candidates</string>
    <string name="search">Search</string>
    <string name="your_details">Your Details</string>
    <string name="change_photo">Change Photo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="once_more">Once More</string>
    <string name="once_more_time">Once More Time</string>
    <string name="privacy_statement">Privacy Statement</string>
    <string name="terms_service">Terms of Service</string>
    <string name="update_terms_service">We\'ve updated our Terms of Service.</string>
    <string name="update_terms_service_subTitle">Please review the new terms below to continue</string>
    <string name="update_privacy_service">We\'ve updated our Privacy Statement</string>
    <string name="update_privacy_service_subTitle">Please review the new privacy statement below to continue.</string>
    <string name="accept">ACCEPT</string>
    <string name="snapshot">Snapshot</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="at">at</string>
    <string name="salary_range">%1$s - %2$s</string>
    <string name="what_hidden_says">What Hidden Says</string>
    <string name="view_company_profile">View the %1$s\nCompany Profile</string>
    <string name="has_worked_with">Has Worked With</string>
    <string name="portfolio">Portfolio</string>
    <string name="highlights">Highlights</string>
    <string name="skills">Skills</string>
    <string name="work_experience">Work Experience</string>
    <string name="present">Present</string>
    <string name="shortlists">SHORTLISTS</string>
    <string name="refresh">Refresh</string>
    <string name="hello_user">Hello %1$s</string>
    <string name="your_hidden_tribe_busy">The Hidden team are busy screening\ncandidates.\nCheck back later!</string>
    <string name="add_more">+%1$s more</string>
    <string name="feedback_notice">To Approve %1$s, Please Give Us Some Quick Feedback</string>
    <string name="feedback_notice1">Please Give Us Some Quick Feedback For %1$s</string>
    <string name="feedback_notice2">"*This goes to your Hidden Talent Partner and not to %1$s directly</string>
    <string name="feedback_notice3">To Reject %1$s, Please Give Us Some Quick Feedback</string>
    <string name="anything_else_to_add">Anything else to add?</string>
    <string name="feedback_here">Add any other comments or \nfeedback here…</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="feedback_success">Congratulations! you\'ve progressed %1$s to First Stage Interview</string>
    <string name="feedback_reject">%1$s has been rejected. Thanks for the feedback.</string>
    <string name="feedback_pending">Thanks for your feedback and vote. Once your colleagues have voted, you\'ll be notified of the outcome!</string>
    <string name="feedback_false">Sorry</string>
    <string name="back_to_shortlist">Back to shortlist</string>
    <string name="give_interview_availability">Give interview availability</string>
    <string name="processes">PROCESSES</string>
    <string name="for_">For</string>
    <string name="process">Process</string>
    <string name="messages">Messages</string>
    <string name="shared_doc">Shared %1$s Document</string>
    <string name="add_interviewers_to_interview">%1$s interviewers to this interview with %2$s</string>
    <string name="can_not_find_any_interviewers">Can \'t find who you\'re looking for? They might not be a Job Participant on this job or process. <![CDATA[<font color="#66CC66">Add them here</font>]]></string>
    <string name="first_stage_interview">First Stage Interview</string>
    <string name="first_state_interview_description">Waiting for Guy\'s availability.\nYou\'ll get a notification when we\'ve confirmed the time/date</string>
    <string name="give_availability">Give Availability</string>
    <string name="has_been_rejected">%1$s has been rejected from the process</string>
    <string name="what_was_the_outcome_of_the_interview">What was the outcome of\nthe interview?</string>
    <string name="progress_to_next_stage">Progress to next stage</string>
    <string name="reject_from_process">Reject from process</string>
    <string name="what_stage_do_you_want_to_progress_to">That\'s great!\nWhat stage do you want to\nprogress to?</string>
    <string name="make_offer">Make Offer</string>
    <string name="please_give_us_some_feedback">To progress %1$s, please give us some quick feedback</string>
    <string name="give_availability_write_message">Write a message to your Talent Partner with your availability and we\'ll do the rest…</string>
    <string name="give_availability_message_placeholder">Type your message here</string>
    <string name="this_goes_to_your_hiddenclient_team">*This goes to your Hidden Talent Partner and not to %1$s directly</string>
    <string name="further_interviews">FURTHER INTERVIEWS</string>
    <string name="further_interviews_description">Don\'t jump the gun! Let\'s get through the First Stage first!</string>
    <string name="further_stage_interviews">Further Stage Interviews</string>
    <string name="further_stage_interview">Further Stage Interview</string>
    <string name="final_interview">FINAL INTERVIEW</string>
    <string name="final_stage_interviews">Final Stage Interviews</string>
    <string name="final_stage_interview">Final Stage Interview</string>
    <string name="chill_your_beans">Chill your beans! You\'ll have to interview</string>
    <string name="offer_stage">Offer Stage</string>
    <string name="not_so_fast">Not so fast! You can make an offer afterthe next interview</string>
    <string name="offer_accepted">Offer Accepted</string>
    <string name="offer_accepted_stage">OFFER ACCEPTED STAGE</string>
    <string name="hold_your_horse">Hold your horses! Let\'s get the  offer to %1$s first…</string>
    <string name="started">Started</string>
    <string name="hold_tight">Hold tight! I\'m sure %1$s will be starting with you soon…</string>
    <string name="filter_by_job">FILTER BY JOB</string>
    <string name="all">All</string>
    <string name="filter_sort">Filter and Sort</string>
    <string name="view_filters">View Filters</string>
    <string name="clear_filter">Clear Filters</string>
    <string name="job">Job</string>
    <string name="process_stage">Process Stage</string>
    <string name="shortlist_stage">Shortlist Stage</string>
    <string name="read_status">Read Status</string>
    <string name="has_unread_messages">Has Unread Messages</string>
    <string name="has_no_unread_messages">Has No Unread Messages</string>
    <string name="done">Done</string>
    <string name="email_team">Email the team</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="most_recent_activity">Most Recent Activity</string>
    <string name="shortlisting_date">Shortlisting Date</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="view_process">View Process</string>
    <string name="job_and_location">For: %1$s, %2$s</string>
    <string name="job_and_location_filter">%1$s, %2$s</string>
    <string name="job_settings">Job Settings</string>
    <string name="shortlist_review_type">Shortlist Review Type</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="set_password">Set Password</string>
    <string name="invite_code">Invite Code</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_media_picker"><font size="16">Media Picker</font>\n<font size="14">Please choose an option</font></string>
    <string name="take_video">Take Video</string>
    <string name="choose_video">Choose Video</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="add_interview">Add Interview</string>
</resources>