<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack_1"
    android:padding="@dimen/padding_default"
    tools:context=".ui.activities.process.HSJumpStageActivity">

    <ImageButton
        android:id="@+id/button_back_to_dashboard"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/image_description_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_left"
        android:background="@drawable/button_circle"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/default_margin_super_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite_1"
            android:text="@string/what_stage_do_you_want_to_progress_to"
            android:gravity="center_horizontal"
            android:fontFamily="@font/avenir"
            android:lineHeight="@dimen/progress_title_line_height"
            android:textAlignment="center"
            android:textSize="@dimen/font_size_medium"
            android:layout_marginBottom="79dp"
            />

        <Button
            android:id="@+id/btn_further_stage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/further_stage_interview"
            android:background="@drawable/button_round_green"
            android:textColor="@color/colorWhite_1"
            android:fontFamily="@font/avenir"
            android:lineHeight="@dimen/progress_button_line_height"
            android:textAlignment="center"
            android:textSize="@dimen/font_size_normal"
            android:textAllCaps="false"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_final_stage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/final_stage_interview"
            android:background="@drawable/button_round_green"
            android:textColor="@color/colorWhite_1"
            android:fontFamily="@font/avenir"
            android:lineHeight="@dimen/progress_button_line_height"
            android:textAlignment="center"
            android:textSize="@dimen/font_size_normal"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/small_margin_super_top"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_add_interview_stage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_interview"
            android:background="@drawable/button_round_green"
            android:textColor="@color/colorWhite_1"
            android:fontFamily="@font/avenir"
            android:lineHeight="@dimen/progress_button_line_height"
            android:textAlignment="center"
            android:textSize="@dimen/font_size_normal"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/small_margin_super_top"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_make_offer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_offer"
            android:background="@drawable/button_round_green"
            android:fontFamily="@font/avenir"
            android:lineHeight="@dimen/progress_button_line_height"
            android:textAlignment="center"
            android:textSize="@dimen/font_size_normal"
            android:textColor="@color/colorWhite_1"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/small_margin_super_top"
            android:visibility="gone"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>