<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_media_picker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#00000000"
    android:padding="10dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/layout_blank"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/button_round_white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColor="#dbdbdb"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/choose_media_picker"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EAEAEA"/>

        <TextView
            android:id="@+id/text_take_video"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#5eaae3"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/take_video"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EAEAEA"/>

        <TextView
            android:id="@+id/text_take_photo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#5eaae3"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/take_photo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EAEAEA"/>

        <TextView
            android:id="@+id/text_choose_video"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#5eaae3"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/choose_video"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EAEAEA"/>

        <TextView
            android:id="@+id/text_choose_photo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#5eaae3"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/choose_photo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_round_white">

        <TextView
            android:id="@+id/text_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/colorRed_1"
            android:gravity="center"
            android:textSize="18sp"
            android:text="Cancel"/>

    </LinearLayout>
</LinearLayout>