<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/panel_rounded_white_30"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:gravity="center_horizontal"
        android:text="@string/anything_else_to_add"
        android:textColor="@color/colorBlack_2"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/edit_comment"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:layout_weight="1"
        android:hint="@string/feedback_here"
        android:background="@color/colorWhite_1"/>

    <LinearLayout
        android:id="@+id/layout_submit_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/menu_padding_vertical_default"
        android:paddingBottom="@dimen/menu_padding_vertical_default"
        android:background="@drawable/panel_bottom_rounded_green"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_approve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/approve"
            android:textColor="@color/colorWhite_1"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>